<resources>
    <string name="app_name">AppListCurso</string>
    <string name="txt_titulo">Aplicativo Lista VIP Curso Android</string>
    <string name="primeiro_nome">Primeiro Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="nome_do_curso_desejado">Nome do Curso Desejado</string>
    <string name="telefone_de_contato">Telefone de Contato</string>
    <string name="txt_button_salvar">SALVAR</string>
    <string name="txt_button_limpar">LIMPAR</string>
    <string name="txt_button_finalizar">FINALIZAR</string>
</resources>